// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcSyncMultipleValuesFilter > should be able to search in items by their text 1`] = `
<div
  class="ec-sync-multiple-values-filter"
  data-test="ec-sync-multiple-values-filter"
>
  <div
    class="ec-filter-popover"
    data-test="ec-sync-multiple-values-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <button
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
        type="button"
      >
        <span
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Status"
        >
          Status
        </span>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </button>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-multiple-values-selection"
          data-test="ec-multiple-values-selection"
        >
          <div
            class="ec-multiple-values-selection__search-area"
          >
            <svg
              class="ec-icon ec-icon--interactive ec-multiple-values-selection__search-icon"
              data-test="ec-multiple-values-selection__search-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-simple-search"
              />
            </svg>
            <input
              autocomplete="off"
              class="ec-multiple-values-selection__search-input"
              data-test="ec-multiple-values-selection__search-input"
              placeholder="Search..."
              type="text"
            />
          </div>
          
          <!--v-if-->
          <div
            class="ec-multiple-values-selection__values"
          >
            <ul>
              
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-2"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <!--v-if-->
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-2"
                      title="Partially paid"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-partial"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Partially paid
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              
            </ul>
          </div>
          
        </div>
        
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcSyncMultipleValuesFilter > should be able to search in items by their text even if diacritics does not match 1`] = `
<div
  class="ec-sync-multiple-values-filter"
  data-test="ec-sync-multiple-values-filter"
>
  <div
    class="ec-filter-popover"
    data-test="ec-sync-multiple-values-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <button
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
        type="button"
      >
        <span
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Status"
        >
          Status
        </span>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </button>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-multiple-values-selection"
          data-test="ec-multiple-values-selection"
        >
          <div
            class="ec-multiple-values-selection__search-area"
          >
            <svg
              class="ec-icon ec-icon--interactive ec-multiple-values-selection__search-icon"
              data-test="ec-multiple-values-selection__search-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-simple-search"
              />
            </svg>
            <input
              autocomplete="off"
              class="ec-multiple-values-selection__search-input"
              data-test="ec-multiple-values-selection__search-input"
              placeholder="Search..."
              type="text"
            />
          </div>
          
          <!--v-if-->
          <div
            class="ec-multiple-values-selection__values"
          >
            <ul>
              
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-1"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <!--v-if-->
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-1"
                      title="Success"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-check"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Success
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              
            </ul>
          </div>
          
        </div>
        
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcSyncMultipleValuesFilter > should display Select all checkbox if isSelectAll is set 1`] = `
<div
  class="ec-sync-multiple-values-filter"
  data-test="ec-sync-multiple-values-filter"
>
  <div
    class="ec-filter-popover"
    data-test="ec-sync-multiple-values-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <button
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
        type="button"
      >
        <span
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Status"
        >
          Status
        </span>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </button>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-multiple-values-selection"
          data-test="ec-multiple-values-selection"
        >
          <!--v-if-->
          
          <div
            class="ec-multiple-values-selection__select-all"
          >
            <div
              class="ec-checkbox"
              data-test="ec-multiple-values-selection__select-all ec-checkbox"
            >
              <input
                class="ec-checkbox__input"
                data-test="ec-checkbox__input"
                id="ec-checkbox-1"
                type="checkbox"
              />
              <div
                class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
              >
                <span
                  class="ec-checkbox__check-icon-wrapper"
                  data-test="ec-checkbox__check-icon-wrapper"
                >
                  <!--v-if-->
                </span>
                <label
                  class="ec-checkbox__label ec-checkbox__label--is-single-line"
                  data-test="ec-checkbox__label"
                  for="ec-checkbox-1"
                  title="Select all"
                >
                  
                  Select all
                  
                </label>
              </div>
              <!--v-if-->
            </div>
          </div>
          <div
            class="ec-multiple-values-selection__values"
          >
            <ul>
              
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-2"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <!--v-if-->
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-2"
                      title="Success"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-check"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Success
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              
            </ul>
          </div>
          
        </div>
        
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcSyncMultipleValuesFilter > should display an empty message when items are empty 1`] = `
<div
  class="ec-sync-multiple-values-filter"
  data-test="ec-sync-multiple-values-filter"
>
  <div
    class="ec-filter-popover"
    data-test="ec-sync-multiple-values-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <button
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
        type="button"
      >
        <span
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Status"
        >
          Status
        </span>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </button>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-multiple-values-selection"
          data-test="ec-multiple-values-selection"
        >
          <!--v-if-->
          <div
            class="ec-multiple-values-selection__no-results-wrapper"
          >
            <svg
              class="ec-icon ec-icon--info ec-multiple-values-selection__no-results-icon"
              data-test="ec-multiple-values-selection__no-results-icon"
              height="32"
              width="32"
            >
              <use
                xlink:href="#ec-simple-error"
              />
            </svg>
            <span
              class="ec-multiple-values-selection__no-results-message"
            >
              Random empty message
            </span>
          </div>
        </div>
        
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcSyncMultipleValuesFilter > should display custom label for Select all checkbox 1`] = `
<div
  class="ec-sync-multiple-values-filter"
  data-test="ec-sync-multiple-values-filter"
>
  <div
    class="ec-filter-popover"
    data-test="ec-sync-multiple-values-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <button
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
        type="button"
      >
        <span
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Status"
        >
          Status
        </span>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </button>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-multiple-values-selection"
          data-test="ec-multiple-values-selection"
        >
          <!--v-if-->
          
          <div
            class="ec-multiple-values-selection__select-all"
          >
            <div
              class="ec-checkbox"
              data-test="ec-multiple-values-selection__select-all ec-checkbox"
            >
              <input
                class="ec-checkbox__input"
                data-test="ec-checkbox__input"
                id="ec-checkbox-1"
                type="checkbox"
              />
              <div
                class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
              >
                <span
                  class="ec-checkbox__check-icon-wrapper"
                  data-test="ec-checkbox__check-icon-wrapper"
                >
                  <!--v-if-->
                </span>
                <label
                  class="ec-checkbox__label ec-checkbox__label--is-single-line"
                  data-test="ec-checkbox__label"
                  for="ec-checkbox-1"
                  title="Custom select all"
                >
                  
                  Custom select all
                  
                </label>
              </div>
              <!--v-if-->
            </div>
          </div>
          <div
            class="ec-multiple-values-selection__values"
          >
            <ul>
              
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-2"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <!--v-if-->
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-2"
                      title="Success"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-check"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Success
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              
            </ul>
          </div>
          
        </div>
        
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcSyncMultipleValuesFilter > should display empty state if searched value does not match any item 1`] = `
<div
  class="ec-sync-multiple-values-filter"
  data-test="ec-sync-multiple-values-filter"
>
  <div
    class="ec-filter-popover"
    data-test="ec-sync-multiple-values-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <button
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
        type="button"
      >
        <span
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Status"
        >
          Status
        </span>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </button>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-multiple-values-selection"
          data-test="ec-multiple-values-selection"
        >
          <div
            class="ec-multiple-values-selection__search-area"
          >
            <svg
              class="ec-icon ec-icon--interactive ec-multiple-values-selection__search-icon"
              data-test="ec-multiple-values-selection__search-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-simple-search"
              />
            </svg>
            <input
              autocomplete="off"
              class="ec-multiple-values-selection__search-input"
              data-test="ec-multiple-values-selection__search-input"
              placeholder="Search..."
              type="text"
            />
          </div>
          <div
            class="ec-multiple-values-selection__no-results-wrapper"
          >
            <svg
              class="ec-icon ec-icon--info ec-multiple-values-selection__no-results-icon"
              data-test="ec-multiple-values-selection__no-results-icon"
              height="32"
              width="32"
            >
              <use
                xlink:href="#ec-simple-error"
              />
            </svg>
            <span
              class="ec-multiple-values-selection__no-results-message"
            >
              No results found
            </span>
          </div>
        </div>
        
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcSyncMultipleValuesFilter > should display error state properly 1`] = `
<div
  class="ec-sync-multiple-values-filter"
  data-test="ec-sync-multiple-values-filter"
>
  <div
    class="ec-filter-popover"
    data-test="ec-sync-multiple-values-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <button
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
        type="button"
      >
        <span
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Status"
        >
          Status
        </span>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </button>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-multiple-values-selection"
          data-test="ec-multiple-values-selection"
        >
          <!--v-if-->
          <div
            class="ec-multiple-values-selection__error-wrapper"
          >
            <svg
              class="ec-icon ec-icon--error ec-multiple-values-selection__error-icon"
              data-test="ec-multiple-values-selection__error-icon"
              height="32"
              width="32"
            >
              <use
                xlink:href="#ec-simple-error"
              />
            </svg>
            <span
              class="ec-multiple-values-selection__error-message"
            >
              Random error message
            </span>
          </div>
        </div>
        
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcSyncMultipleValuesFilter > should display loading state properly 1`] = `
<div
  class="ec-sync-multiple-values-filter"
  data-test="ec-sync-multiple-values-filter"
>
  <div
    class="ec-filter-popover"
    data-test="ec-sync-multiple-values-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <button
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
        type="button"
      >
        <span
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Status"
        >
          Status
        </span>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </button>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-multiple-values-selection"
          data-test="ec-multiple-values-selection"
        >
          <!--v-if-->
          <div
            class="ec-multiple-values-selection__loading"
          >
            <svg
              class="ec-icon ec-loading-icon"
              data-test="ec-loading-icon"
              height="32"
              width="32"
            >
              <use
                xlink:href="#ec-simple-loading"
              />
            </svg>
          </div>
        </div>
        
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcSyncMultipleValuesFilter > should ignore empty message when items are given 1`] = `
<div
  class="ec-sync-multiple-values-filter"
  data-test="ec-sync-multiple-values-filter"
>
  <div
    class="ec-filter-popover"
    data-test="ec-sync-multiple-values-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <button
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
        type="button"
      >
        <span
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Status"
        >
          Status
        </span>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </button>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-multiple-values-selection"
          data-test="ec-multiple-values-selection"
        >
          <!--v-if-->
          
          <!--v-if-->
          <div
            class="ec-multiple-values-selection__values"
          >
            <ul>
              
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-1"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <!--v-if-->
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-1"
                      title="Success"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-check"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Success
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-2"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <!--v-if-->
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-2"
                      title="Partially paid"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-partial"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Partially paid
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-2 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-3"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <!--v-if-->
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-3"
                      title="Cancelled"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--error ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-cancelled"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Cancelled
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              
            </ul>
          </div>
          
        </div>
        
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcSyncMultipleValuesFilter > should ignore only whitespace in the search query 1`] = `
<div
  class="ec-sync-multiple-values-filter"
  data-test="ec-sync-multiple-values-filter"
>
  <div
    class="ec-filter-popover"
    data-test="ec-sync-multiple-values-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <button
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
        type="button"
      >
        <span
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Status"
        >
          Status
        </span>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </button>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-multiple-values-selection"
          data-test="ec-multiple-values-selection"
        >
          <div
            class="ec-multiple-values-selection__search-area"
          >
            <svg
              class="ec-icon ec-icon--interactive ec-multiple-values-selection__search-icon"
              data-test="ec-multiple-values-selection__search-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-simple-search"
              />
            </svg>
            <input
              autocomplete="off"
              class="ec-multiple-values-selection__search-input"
              data-test="ec-multiple-values-selection__search-input"
              placeholder="Search..."
              type="text"
            />
          </div>
          
          <!--v-if-->
          <div
            class="ec-multiple-values-selection__values"
          >
            <ul>
              
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-1"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <!--v-if-->
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-1"
                      title="Success"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-check"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Success
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-2"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <!--v-if-->
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-2"
                      title="Partially paid"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-partial"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Partially paid
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-2 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-3"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <!--v-if-->
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-3"
                      title="Cancelled"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--error ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-cancelled"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Cancelled
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              
            </ul>
          </div>
          
        </div>
        
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcSyncMultipleValuesFilter > should not display selected values in the empty state if searched value does not match any item 1`] = `
<div
  class="ec-sync-multiple-values-filter"
  data-test="ec-sync-multiple-values-filter"
>
  <div
    class="ec-filter-popover"
    data-test="ec-sync-multiple-values-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <button
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
        type="button"
      >
        <span
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Status"
        >
          Status
        </span>
        <span
          class="ec-badge ec-badge--info ec-filter-popover__badge"
          data-test="ec-badge"
        >
          
          2
          
        </span>
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </button>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-multiple-values-selection"
          data-test="ec-multiple-values-selection"
        >
          <div
            class="ec-multiple-values-selection__search-area"
          >
            <svg
              class="ec-icon ec-icon--interactive ec-multiple-values-selection__search-icon"
              data-test="ec-multiple-values-selection__search-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-simple-search"
              />
            </svg>
            <input
              autocomplete="off"
              class="ec-multiple-values-selection__search-input"
              data-test="ec-multiple-values-selection__search-input"
              placeholder="Search..."
              type="text"
            />
          </div>
          <div
            class="ec-multiple-values-selection__no-results-wrapper"
          >
            <svg
              class="ec-icon ec-icon--info ec-multiple-values-selection__no-results-icon"
              data-test="ec-multiple-values-selection__no-results-icon"
              height="32"
              width="32"
            >
              <use
                xlink:href="#ec-simple-error"
              />
            </svg>
            <span
              class="ec-multiple-values-selection__no-results-message"
            >
              No results found
            </span>
          </div>
        </div>
        
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcSyncMultipleValuesFilter > should render as full height if isFullHeight is set 1`] = `
<div
  class="ec-sync-multiple-values-filter"
  data-test="ec-sync-multiple-values-filter"
>
  <div
    class="ec-filter-popover"
    data-test="ec-sync-multiple-values-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <button
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
        type="button"
      >
        <span
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Status"
        >
          Status
        </span>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </button>
      
      
      <div
        class="ec-filter-popover__filter-content ec-filter-popover__filter-content--is-full-height"
      >
        
        <div
          class="ec-multiple-values-selection"
          data-test="ec-multiple-values-selection"
        >
          <!--v-if-->
          
          <!--v-if-->
          <div
            class="ec-multiple-values-selection__values"
          >
            <ul>
              
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-1"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <!--v-if-->
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-1"
                      title="Success"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-check"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Success
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              
            </ul>
          </div>
          
        </div>
        
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcSyncMultipleValuesFilter > should render correctly if all the required props are passed 1`] = `
<div
  class="ec-sync-multiple-values-filter"
  data-test="ec-sync-multiple-values-filter"
>
  <div
    class="ec-filter-popover"
    data-test="ec-sync-multiple-values-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <button
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
        type="button"
      >
        <span
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Status"
        >
          Status
        </span>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </button>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-multiple-values-selection"
          data-test="ec-multiple-values-selection"
        >
          <!--v-if-->
          
          <!--v-if-->
          <div
            class="ec-multiple-values-selection__values"
          >
            <ul>
              
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-1"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <!--v-if-->
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-1"
                      title="Success"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-check"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Success
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-2"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <!--v-if-->
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-2"
                      title="Partially paid"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-partial"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Partially paid
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-2 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-3"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <!--v-if-->
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-3"
                      title="Cancelled"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--error ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-cancelled"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Cancelled
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              
            </ul>
          </div>
          
        </div>
        
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcSyncMultipleValuesFilter > should render custom search placeholder if is given 1`] = `
<input
  autocomplete="off"
  class="ec-multiple-values-selection__search-input"
  data-test="ec-multiple-values-selection__search-input"
  placeholder="Custom Search..."
  type="text"
/>
`;

exports[`EcSyncMultipleValuesFilter > should render search if isSearchable is set 1`] = `
<div
  class="ec-sync-multiple-values-filter"
  data-test="ec-sync-multiple-values-filter"
>
  <div
    class="ec-filter-popover"
    data-test="ec-sync-multiple-values-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <button
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
        type="button"
      >
        <span
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Status"
        >
          Status
        </span>
        <!--v-if-->
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </button>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-multiple-values-selection"
          data-test="ec-multiple-values-selection"
        >
          <div
            class="ec-multiple-values-selection__search-area"
          >
            <svg
              class="ec-icon ec-icon--interactive ec-multiple-values-selection__search-icon"
              data-test="ec-multiple-values-selection__search-icon"
              height="20"
              width="20"
            >
              <use
                xlink:href="#ec-simple-search"
              />
            </svg>
            <input
              autocomplete="off"
              class="ec-multiple-values-selection__search-input"
              data-test="ec-multiple-values-selection__search-input"
              placeholder="Search..."
              type="text"
            />
          </div>
          
          <!--v-if-->
          <div
            class="ec-multiple-values-selection__values"
          >
            <ul>
              
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-0 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-1"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <!--v-if-->
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-1"
                      title="Success"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-check"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Success
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              
            </ul>
          </div>
          
        </div>
        
      </div>
      
    </ec-stub>
  </div>
</div>
`;

exports[`EcSyncMultipleValuesFilter > should update the number of items selected in numberOfSelectedFilters 1`] = `
<div
  class="ec-sync-multiple-values-filter"
  data-test="ec-sync-multiple-values-filter"
>
  <div
    class="ec-filter-popover"
    data-test="ec-sync-multiple-values-filter__trigger"
  >
    <ec-stub
      data-test="ec-stub ec-popover-stub"
      distance="8"
      placement="bottom-start"
      prevent-overflow="false"
    >
      
      <button
        class="ec-filter-popover__trigger"
        data-test="ec-filter-popover__trigger"
        type="button"
      >
        <span
          class="ec-filter-popover__label"
          data-test="ec-filter-popover__label"
          title="Status"
        >
          Status
        </span>
        <span
          class="ec-badge ec-badge--info ec-filter-popover__badge"
          data-test="ec-badge"
        >
          
          1
          
        </span>
        <svg
          class="ec-icon ec-icon--interactive ec-filter-popover__icon"
          height="16"
          width="16"
        >
          <use
            xlink:href="#ec-simple-chevron-down"
          />
        </svg>
      </button>
      
      
      <div
        class="ec-filter-popover__filter-content"
      >
        
        <div
          class="ec-multiple-values-selection"
          data-test="ec-multiple-values-selection"
        >
          <!--v-if-->
          
          <!--v-if-->
          <div
            class="ec-multiple-values-selection__values"
          >
            <ul>
              
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-deselect ec-multiple-values-selection__checkbox-deselect-0 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-1"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <svg
                        class="ec-icon ec-checkbox__check-icon"
                        data-test="ec-checkbox__check-icon"
                        height="16"
                        width="16"
                      >
                        <use
                          xlink:href="#ec-simple-check"
                        />
                      </svg>
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-1"
                      title="Success"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-check"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Success
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-1 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-2"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <!--v-if-->
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-2"
                      title="Partially paid"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--success ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-partial"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Partially paid
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              <li
                class="ec-multiple-values-selection__value-wrapper"
                data-test="ec-multiple-values-selection__value-wrapper ec-multiple-values-selection__value-wrapper--not-selected"
              >
                <div
                  class="ec-checkbox ec-multiple-values-selection__checkbox"
                  data-test="ec-multiple-values-selection__checkbox-select ec-multiple-values-selection__checkbox-select-2 ec-checkbox"
                >
                  <input
                    class="ec-checkbox__input"
                    data-test="ec-checkbox__input"
                    id="ec-checkbox-3"
                    type="checkbox"
                  />
                  <div
                    class="ec-checkbox__label-checkbox-wrapper ec-checkbox__label-checkbox-wrapper--is-single-line"
                  >
                    <span
                      class="ec-checkbox__check-icon-wrapper"
                      data-test="ec-checkbox__check-icon-wrapper"
                    >
                      <!--v-if-->
                    </span>
                    <label
                      class="ec-checkbox__label ec-checkbox__label--is-single-line"
                      data-test="ec-checkbox__label"
                      for="ec-checkbox-3"
                      title="Cancelled"
                    >
                      
                      <div
                        class="ec-multiple-values-selection__label-wrapper"
                      >
                        <svg
                          class="ec-icon ec-icon--error ec-multiple-values-selection__icon"
                          height="20"
                          width="20"
                        >
                          <use
                            xlink:href="#ec-rounded-cancelled"
                          />
                        </svg>
                        <span
                          class="ec-multiple-values-selection__label-text"
                        >
                          Cancelled
                        </span>
                      </div>
                      
                    </label>
                  </div>
                  <!--v-if-->
                </div>
              </li>
              
            </ul>
          </div>
          
        </div>
        
      </div>
      
    </ec-stub>
  </div>
</div>
`;
